--- a/dbt_project.yml
+++ b/dbt_project.yml
@@ -7,7 +7,7 @@ require-dbt-version: ">=1.5.0"
 dbt-cloud:
   project-id: 275557 # Put your project id here
 
-profile: dev # Put your profile here
+profile: jaffle_shop # Put your profile here
 
 model-paths: ["models"]
 analysis-paths: ["analyses"]
